# proof-of-burn

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Main.sol  Makefile  Nargo.toml  README.md  circomkit.json  main.py  pob.circom  proof_of_burn.circom  requirements.txt  shell.nix  tasks.md  test.py  test_pob_input.json
.github/workflows/: circuitscan.yml  sepolia.yml  test.yml
circuits/: main_proof_of_burn.circom  main_spend.circom  proof_of_burn.circom  spend.circom  test.circom
circuits/utils/: array.circom  assert.circom  burn_address.circom  commit.circom  concat.circom  constants.circom  convert.circom  divide.circom  hasher.circom  keccak.circom  leaf.circom  leaf_key.circom  proof_of_work.circom  public_commitment.circom  rlp.circom  selector.circom  shift.circom  substring_check.circom  substring_finder.circom  utils.circom
front/: index.html  index.js  package.json  vite.config.js
proof-of-burn-circom/: Makefile  main.py  mimc7.py  mpt_path.circom  pob.circom  proof_of_burn.circom
proof-of-burn-circom/utils/: padding.circom  rlp.circom  utils.circom
rust-stark-implementation/: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PR.md  README.md  production_proof_final.stark  rust-toolchain.toml  test_input.json  test_proof.stark  test_proof3.stark  valid_test.stark
rust-stark-implementation/benches/: proof_generation.rs  verification.rs
rust-stark-implementation/examples/: README.md
rust-stark-implementation/examples/inputs/: production_test_input.json  real_test_input.json  valid_test_input.json
rust-stark-implementation/examples/proofs/: production_proof.commitment  production_proof.stark  test_constraints.stark  test_poseidon_real.stark  test_proof_no_pow.commitment  test_proof_no_pow.stark  valid_test.commitment
rust-stark-implementation/src/: lib.rs
rust-stark-implementation/src/cli/: commands.rs  mod.rs
rust-stark-implementation/src/components/: burn_address.rs  mod.rs  mpt_proof.rs  nullifier.rs  proof_of_work.rs  prover.rs  public_commitment.rs
rust-stark-implementation/src/crypto/: keccak.rs  mod.rs  poseidon.rs
rust-stark-implementation/src/ethereum/: mod.rs  rlp.rs  types.rs
rust-stark-implementation/src/utils/: conversions.rs  mod.rs  validation.rs
rust-stark-implementation/tests/: circom_compatibility.rs
src/: contains.nr  main.nr  rlp.nr  utils.nr
src/rlp/: mod.nr  utils.nr
tests/: constants.py  main.py  poseidon.py  poseidon2.py  test.py  test_pob_input.json  test_spend_input.json
tests/testcases/: array.py  assertion.py  burn_address.py  concat.py  convert.py  divide.py  keccak.py  poseidon.py  proof_of_burn.py  proof_of_work.py  public_commitment.py  selector.py  shift.py  spend.py  substring_check.py
utils/: concat.circom  hasher.circom  leaf.circom  rlp.circom  selector.circom  utils.circom
utils/keccak/: keccak.circom
utils/utils/: rlp.circom  (+1 more)
(+13 files in other folders)
